Header z-index fix

--- a/Source/Components/App/Landing/Header/styles.css
+++ b/Source/Components/App/Landing/Header/styles.css
@@ -1,5 +1,5 @@
 .header {
-    font-family: DINLight;
+    z-index: 100;
 }
 
 .header__heading {
@@ -11,7 +11,7 @@
     font-size: 20pt;
     transition: opacity 1.33s ease;
     cursor: pointer;
-    z-index: 10;
+    z-index: 100;
 }
 @media (max-width: 992px) {
     .header__heading {
