--- a/Source/Components/App/Portfolio/Tomosphere/styles.css
+++ b/Source/Components/App/Portfolio/Tomosphere/styles.css
@@ -19,10 +19,10 @@
 }
 
 .tomosphere__p1 {
-    font-size: 72pt;
+    font-size: 64pt;
     margin-bottom: 0;
 }
 
 .tomosphere__p2 {
-    font-size: 42pt;
+    font-size: 32pt;
 }
